# whetstone

./: .cursorignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
conf/: base.yaml  named_experiment.yaml
tests/: conftest.py
tests/common/: conftest.py  test_corpus.py  test_job.py  test_model.py  test_objective.py  test_optimizer.py
tests/modules/: models.py  objectives.py  optimizers.py
whetstone/: __init__.py  cli.py  utils.py
whetstone/core/: __init__.py  constraint.py  corpus.py  job.py  model.py  module.py  objective.py  optimizer.py
whetstone/modules/: __init__.py
whetstone/modules/models/: __init__.py  dummy.py  hf_transformers.py  openai.py
whetstone/modules/objectives/: __init__.py  dummy.py  length.py  llm_judge.py
whetstone/modules/objectives/differentiable/: multi.py  str_match.py
whetstone/modules/optimizers/: __init__.py  gcg.py  llm.py  multi.py  random.py
