[tool.poetry]
name = "whetstone"
version = "0.1.0"
description = "GenAI Testing Toolkit"
authors = ["Kai Greshake <kgreshake@nvidia.com>"]
readme = "README.md"
packages = [{include = "whetstone"}]

[tool.poetry.dependencies]
python = ">=3.12"
torch = ">=2.6.0"
hydra-core = ">=1.3.2"
omegaconf = ">=2.3.0"
tqdm = ">=4.67.1"
transformers = ">=4.48.3"
accelerate = ">=1.3.0"
hydra-zen = ">=0.13.0"
rich = ">=13.9.4"
openai = ">=1.66.3"
tiktoken = ">=0.9.0"
protobuf = ">=6.30.2"
sentencepiece = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
bandit = {extras = ["toml", "baseline"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
