[tool.poetry]
name = "whetstone"
version = "0.1.0"
description = "GenAI Testing Toolkit"
authors = ["Kai Greshake <kgreshake@nvidia.com>"]
readme = "README.md"
packages = [{include = "whetstone"}]

[tool.poetry.dependencies]
python = ">=3.12"
torch = ">=2.7.0"
hydra-core = ">=1.3.2"
omegaconf = ">=2.3.0"
tqdm = ">=4.67.1"
transformers = ">=4.56.0"
accelerate = ">=1.10.0"
hydra-zen = ">=0.13.0"
rich = ">=14.1.0"
openai = ">=1.109.0"
tiktoken = ">=0.11.0"
protobuf = ">=6.32.0"
sentencepiece = ">=0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2"
bandit = {extras = ["toml", "baseline"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
